feat: add modifying validity rules from the 'All devices' page and add automatic reload of the data after

--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -35,7 +35,7 @@ body {
 /* Table base style */
 .table {
   width: 100%;
-  border-collapse: separate;
+  border-collapse: collapse;
   border-spacing: 0 0.75rem;
   color: #1f2937;
   font-size: 0.9rem;
