fix: updating the wrong table in the all devices page

--- a/src/webapp/templates/split.html
+++ b/src/webapp/templates/split.html
@@ -31,7 +31,7 @@
             <span id="refresh-{{ table['html_name'] }}-text"><i class="bi bi-arrow-clockwise"></i></span>
         </button>
         <div style="max-width: 1300px; overflow-x: auto; overflow-y: hidden; border: 1px solid #ccc; padding: 10px;">
-            <table class="table table-striped table-bordered table-hover table-sm" id="{{ table['html_name'] }}_table">
+            <table id="{{ table['html_name'] }}_table" class="table table-striped table-bordered table-hover table-sm">
                 <thead>
                     <tr>
                         <th>#</th>
