feat: fix the first two columns (# and device name) and add column selector

--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -54,6 +54,8 @@
     </div>
 </div>
 
+<!-- Column selector -->
+
 
 <!-- All devices -->
 <div style="max-width: 1300px; overflow-x: auto; overflow-y: hidden; border: 1px solid #ccc; padding: 10px;">
