--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -15,9 +15,11 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
         <!-- DataTables (Bootstrap) -->
-        <link href="https://cdn.datatables.net/2.3.2/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+        <link href="https://cdn.datatables.net/2.3.2/css/dataTables.bootstrap5.min.css"  rel="stylesheet">
         <!-- DataTables Buttons extension -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/datatables.net-buttons-bs5/css/buttons.bootstrap5.min.css">
+        <link href="https://cdn.datatables.net/buttons/3.2.4/css/buttons.bootstrap5.min.css" rel="stylesheet">
+        <!-- DataTables FixColumns -->
+        <link href="https://cdn.datatables.net/fixedcolumns/5.0.4/css/fixedColumns.bootstrap5.min.css" rel="stylesheet">
 
     </head>
 
@@ -47,16 +49,12 @@
         <!-- DataTables (Bootstrap) -->
         <script src="https://cdn.datatables.net/2.3.2/js/dataTables.bootstrap5.min.js"></script>
         <!-- DataTables Buttons extension -->
-        <script src="https://cdn.jsdelivr.net/npm/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/datatables.net-buttons/js/buttons.html5.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/datatables.net-buttons/js/buttons.print.min.js"></script>
-        <!-- DataTables Buttons extension (Boostrap) -->
-        <script src="https://cdn.jsdelivr.net/npm/datatables.net-buttons-bs5/js/buttons.bootstrap5.min.js"></script>
-
-        <!-- Export dependencies -->
-        <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.2.7/build/pdfmake.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.2.7/build/vfs_fonts.js"></script>
+        <script src="https://cdn.datatables.net/buttons/3.2.4/js/dataTables.buttons.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/3.2.4/js/buttons.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/3.2.4/js/buttons.colVis.min.js"></script>
+        <!-- DataTables FixedColumns extension -->
+        <script src="https://cdn.datatables.net/fixedcolumns/5.0.4/js/dataTables.fixedColumns.min.js"></script>
+        <script src="https://cdn.datatables.net/fixedcolumns/5.0.4/js/fixedColumns.bootstrap5.min.js"></script>
 
         <!-- Application js scripts -->
         <script src="{{ url_for('static', filename='scripts.js') }}"></script>
