feat: make event table a datatable

--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -18,7 +18,7 @@
             </div>
             <div class="modal-body">
                 <table id="edit-validity-rules-table" class="table table-bordered table-striped text-center align-middle">
-                    <thead class="table-dark">
+                    <thead>
                         <tr>
                             <th>Device Name</th>
                             <th>AD</th>
