--- a/src/webapp/templates/events.html
+++ b/src/webapp/templates/events.html
@@ -4,8 +4,8 @@
 <div class="container mt-4">
     <h2 class="mb-3">Events</h2>
     <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped align-middle text-center">
-            <thead class="table-dark">
+        <table id="event_table" class="table table-bordered table-striped text-center align-middle">
+            <thead>
                 <tr>
                     <th>#</th>
                     <th>Event Type</th>
@@ -32,4 +32,32 @@
         </table>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        $('#event_table').DataTable({
+            layout: {
+                topStart: ['pageLength', 'buttons']
+            },
+            buttons: ['colvis'],
+            lengthMenu: [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
+            pageLength: 50,
+            scrollX: true,
+            fixedColumns: { start: 2 },
+            headerCallback: function(thead) {
+                $(thead).find('th').css({
+                    'background-color': '#3b82f6',
+                    'color': '#ffffff',
+                    'border-bottom': 'none',
+                    'padding': '0.75rem 1rem',
+                    'text-align': 'left',
+                    'font-weight': '600',
+                    'border-radius': '0.5rem 0.5rem 0 0'
+                });
+            }
+        })
+
+    })
+</script>
 {% endblock %}
