--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -26,12 +26,10 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-            <div class="">
-                <img src="{{ url_for('static', filename='logo.svg') }}" alt="Logo" width="100" height="50" class="d-inline-block align-text-top">
+                <img src="{{ url_for('static', filename='logo.svg') }}" alt="Logo" width="100" height="50" class="navbar-brand d-inline-block align-text-top">
                 <a class="navbar-brand" href="{{ url_for('merged') }}">All devices</a>
                 <a class="navbar-brand" href="{{ url_for('split') }}">Per tools</a>
                 <a class="navbar-brand" href="{{ url_for('event_devices') }}">Events</a>
-            </div>
         </nav>
 
         <div class="container mt-4">
