--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -11,7 +11,7 @@
   Edit validity rules
 </button>
 <div class="modal fade" id="edit-validity-rules" tabindex="-1" aria-labelledby="edit-validity-rules-label" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="edit-validity-rules-title">Validity rules</h1>
@@ -35,14 +35,14 @@
                             {% for tool, value in table_dict.items() %}
                             <td>
                                 <input
-                                        type="checkbox"
-                                        id="{{category}}_{{tool}}"
-                                        name="{{category}}_{{tool}}"
-                                        data-category="{{ category }}"
-                                        data-tool="{{ tool }}"
-                                        onchange="validityRulesChange(this)"
-                                        {% if value %}checked{% endif %}
-                                        />
+                                    type="checkbox"
+                                    id="{{ category }}_{{ tool }}"
+                                    name="{{ category }}_{{ tool }}"
+                                    data-category="{{ category }}"
+                                    data-tool="{{ tool }}"
+                                    data-state={{ value }}
+                                    class="three-state"
+                                />
                             </td>
                             {% endfor %}
                         </tr>
@@ -77,8 +77,31 @@
 {% block scripts %}
 <script>
     $(document).ready(function() {
+        // DataTables
         refreshTab('devices', false)
+
+        // Input display
+        document.querySelectorAll('.three-state').forEach((checkbox) => {
+            updateVisual(checkbox)
+            checkbox.addEventListener('click', (e) => {
+                e.preventDefault();
+                checkbox.dataset.state = (checkbox.dataset.state + 1) % 3;
+                updateVisual(checkbox)
+                validityRulesChange(checkbox)
+            });
+        })
     })
+    function updateVisual(checkbox) {
+        checkbox.checked = checkbox.dataset.state == "1";
+        checkbox.indeterminate = checkbox.dataset.state == "2";
+        checkbox.classList.remove('state-indeterminate', 'state-checked')
+        if(checkbox.checked) {
+            checkbox.classList.add('state-checked')
+        }
+        else if(checkbox.indeterminate) {
+            checkbox.classList.add('state-indeterminate')
+        }
+    }
     function validityRulesChange(input) {
         validityRulesEdit(input);
         refreshTab('devices', false) // TODO: overkill, should only reload the validity data
