feat: no idea it's been a long time

--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -62,7 +62,7 @@
 
 <!-- All devices -->
 <div style="max-width: 1300px; overflow-x: auto; overflow-y: hidden; border: 1px solid #ccc; padding: 10px;">
-    <table id="devices_table" class="table table-striped table-bordered table-hover table-sm">
+    <table id="devices-table" class="table table-striped table-bordered table-hover table-sm table-pickerable">
         <thead>
             <tr>
                 <th>#</th>
@@ -71,7 +71,7 @@
                 {% endfor %}
             </tr>
         </thead>
-        <tbody id="devices_tbody">
+        <tbody id="devices-tbody">
         </tbody>
     </table>
 </div>
