--- a/src/webapp/templates/split.html
+++ b/src/webapp/templates/split.html
@@ -31,7 +31,7 @@
             <span id="refresh-{{ table['html_name'] }}-text"><i class="bi bi-arrow-clockwise"></i></span>
         </button>
         <div style="max-width: 1300px; overflow-x: auto; overflow-y: hidden; border: 1px solid #ccc; padding: 10px;">
-            <table id="{{ table['html_name'] }}_table" class="table table-striped table-bordered table-hover table-sm">
+            <table id="{{ table['html_name'] }}-table" class="table table-striped table-bordered table-hover table-sm table-pickerable">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -40,7 +40,7 @@
                         {% endfor %}
                     </tr>
                 </thead>
-                <tbody id="{{ table['html_name']}}_tbody">
+                <tbody id="{{ table['html_name']}}-tbody">
                 </tbody>
             </table>
         </div>
@@ -53,7 +53,7 @@
 <script>
     $(document).ready(function() {
         {% for table in tables %}
-        refreshTab("{{ table["html_name"] }}", false)
+        refreshTab("{{ table['html_name'] }}", false)
         {% endfor %}
     });
 </script>
