--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -17,7 +17,7 @@
                 <h1 class="modal-title fs-5" id="edit-validity-rules-title">Validity rules</h1>
             </div>
             <div class="modal-body">
-                <table id="edit-validity-rules-table" class="table table-bordered table-striped text-center align-middle">
+                <table id="edit-validity-rules-table" class="table table-striped table-bordered table-sm table-edit-validity-rule">
                     <thead>
                         <tr>
                             <th>Device category</th>
