feat: add modules for easier implementation of new data sources

--- a/src/webapp/templates/modules.html
+++ b/src/webapp/templates/modules.html
@@ -4,7 +4,7 @@
 <div class="card" role="region" aria-labelledby="title">
     <header>
         <div>
-            <h1 id="title">To get started, first select modules</h1>
+            <h1 id="title">Manage modules</h1>
         </div>
     </header>
 
