--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -27,8 +27,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
                 <img src="{{ url_for('static', filename='logo.svg') }}" alt="Logo" width="100" height="50" class="navbar-brand d-inline-block align-text-top">
+                <a class="navbar-brand" href="{{ url_for('modules') }}">Modules</a>
                 <a class="navbar-brand" href="{{ url_for('merged') }}">All devices</a>
-                <a class="navbar-brand" href="{{ url_for('split') }}">Per tools</a>
+                <a class="navbar-brand" href="{{ url_for('split') }}">By tools</a>
                 <a class="navbar-brand" href="{{ url_for('event_devices') }}">Events</a>
         </nav>
 
