--- a/src/webapp/templates/split.html
+++ b/src/webapp/templates/split.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1> Per tools </h1>
+<h1> By tools </h1>
 <!-- Tabs nav -->
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     {% for table in tables %}
     <li class="nav-item" role="presentation">
         <button class="nav-link {% if loop.first %}active{% endif %}" 
-                id="{{ table['html_name'] }}-tab" 
+                id="{{ table['name'] }}-tab" 
                 data-bs-toggle="tab" 
-                data-bs-target="#{{ table['html_name'] }}" 
+                data-bs-target="#{{ table['name'] }}" 
                 type="button" 
                 role="tab" 
-                aria-controls="{{ table['html_name'] }}" 
+                aria-controls="{{ table['name'] }}" 
                 aria-selected="{{ 'true' if loop.first else 'false' }}">
             {{ table["name"] }}
         </button>
@@ -24,14 +24,14 @@
 <div class="tab-content" id="myTabContent">
     {% for table in tables %}
     <div class="tab-pane fade {% if loop.first %}show active{% endif %}" 
-         id="{{ table['html_name'] }}" 
+         id="{{ table['name'] }}" 
          role="tabpanel" 
-         aria-labelledby="{{ table['html_name'] }}-tab">
-        <button id="refresh-{{ table['html_name'] }}" type="button" class="btn btn-sm btn-outline-primary" title="Refresh" onclick="refreshTab('{{ table['html_name'] }}', true)">
-            <span id="refresh-{{ table['html_name'] }}-text"><i class="bi bi-arrow-clockwise"></i></span>
+         aria-labelledby="{{ table['name'] }}-tab">
+        <button id="refresh-{{ table['name'] }}" type="button" class="btn btn-sm btn-outline-primary" title="Refresh" onclick="refreshTab('{{ table['name'] }}', true)">
+            <span id="refresh-{{ table['name'] }}-text"><i class="bi bi-arrow-clockwise"></i></span>
         </button>
         <div style="max-width: 1300px; overflow-x: auto; overflow-y: hidden; border: 1px solid #ccc; padding: 10px;">
-            <table id="{{ table['html_name'] }}-table" class="table table-striped table-bordered table-hover table-sm table-pickerable">
+            <table id="{{ table['name'] }}-table" class="table table-striped table-bordered table-hover table-sm table-pickerable">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -40,7 +40,7 @@
                         {% endfor %}
                     </tr>
                 </thead>
-                <tbody id="{{ table['html_name']}}-tbody">
+                <tbody id="{{ table['name']}}-tbody">
                 </tbody>
             </table>
         </div>
@@ -53,7 +53,7 @@
 <script>
     $(document).ready(function() {
         {% for table in tables %}
-        refreshTab("{{ table['html_name'] }}", false)
+        refreshTab("{{ table['name'] }}", false)
         {% endfor %}
     });
 </script>
