--- a/src/webapp/templates/events.html
+++ b/src/webapp/templates/events.html
@@ -36,27 +36,27 @@
 {% block scripts %}
 <script>
     $(document).ready(function() {
-        $('#event_table').DataTable({
-            layout: {
-                topStart: ['pageLength', 'buttons']
-            },
-            buttons: ['colvis'],
-            lengthMenu: [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
-            pageLength: 50,
-            scrollX: true,
-            fixedColumns: { start: 2 },
-            headerCallback: function(thead) {
-                $(thead).find('th').css({
-                    'background-color': '#3b82f6',
-                    'color': '#ffffff',
-                    'border-bottom': 'none',
-                    'padding': '0.75rem 1rem',
-                    'text-align': 'left',
-                    'font-weight': '600',
-                    'border-radius': '0.5rem 0.5rem 0 0'
-                });
-            }
-        })
+        //$('#event_table').DataTable({
+        //    layout: {
+        //        topStart: ['pageLength', 'buttons']
+        //    },
+        //    buttons: ['colvis'],
+        //    lengthMenu: [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
+        //    pageLength: 50,
+        //    scrollX: true,
+        //    fixedColumns: { start: 2 },
+        //    headerCallback: function(thead) {
+        //        $(thead).find('th').css({
+        //            'background-color': '#3b82f6',
+        //            'color': '#ffffff',
+        //            'border-bottom': 'none',
+        //            'padding': '0.75rem 1rem',
+        //            'text-align': 'left',
+        //            'font-weight': '600',
+        //            'border-radius': '0.5rem 0.5rem 0 0'
+        //        });
+        //    }
+        //})
 
     })
 </script>
