fix: numerous bugs with adding a category and refactor the static folder

--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 
         <!-- DataTables (Bootstrap) -->
         <link href="https://cdn.datatables.net/2.3.2/css/dataTables.bootstrap5.min.css"  rel="stylesheet">
@@ -58,7 +58,7 @@
         <script src="https://cdn.datatables.net/fixedcolumns/5.0.4/js/fixedColumns.bootstrap5.min.js"></script>
 
         <!-- Application js scripts -->
-        <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
         {% block scripts %}
         {% endblock %}
