--- a/src/webapp/templates/merged.html
+++ b/src/webapp/templates/merged.html
@@ -65,27 +65,25 @@
                 <table id="edit-validity-rules-table" class="table table-striped table-bordered table-sm table-edit-validity-rule">
                     <thead>
                         <tr>
-                            <th>Device category</th>
-                            <th>AD</th>
-                            <th>Intune</th>
-                            <th>Endpoint</th>
-                            <th>Tenable Sensor</th>
-                            <th>Entra</th>
+                            <th>Category</th>
+                            {% for module in activated_modules %}
+                            <th>{{ module.display_name }}</th>
+                            {% endfor %}
                         </tr>
                     </thead>
                     <tbody>
                         {% for category, table_dict in validity_rules.items() %}
                         <tr>
                             <td>{{ category }}</td>
-                            {% for tool, value in table_dict.items() %}
+                            {% for module in activated_modules %}
                             <td>
                                 <input
                                     type="checkbox"
-                                    id="{{ category }}_{{ tool }}"
-                                    name="{{ category }}_{{ tool }}"
+                                    id="{{ category }}_{{ module.name }}"
+                                    name="{{ category }}_{{ module.name }}"
                                     data-category="{{ category }}"
-                                    data-tool="{{ tool }}"
-                                    data-state={{ value }}
+                                    data-tool="{{ module.name }}"
+                                    data-state={{ table_dict[module.name] }}
                                     class="three-state"
                                 />
                             </td>
@@ -112,7 +110,7 @@
             <tr>
                 <th>#</th>
                 {% for colname in colnames %}
-                <th>{{ colname }}</th>
+                <th>{{ colname.capitalize().replace('_', ' ') }}</th>
                 {% endfor %}
             </tr>
         </thead>
