--- a/src/webapp/templates/device.html
+++ b/src/webapp/templates/device.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
-    <h2 class="mb-3">{{ name }}</h2>
+    <h2 class="mb-2">{{ name }}</h2>
+    <h3 class="mb-3">Presence in modules</h3>
     <div class="table-responsive">
         <table id="{{ name }}_module_table" class="table table-bordered table-striped text-center align-middle">
             <thead>
@@ -20,6 +21,23 @@
             </tbody>
         </table>
     </div>
+    <h3 class="mb-3">Serial numbers</h3>
+        <table id="{{ name }}_sn_table" class="table table-bordered table-striped text-center align-middle">
+            <thead>
+                <tr>
+                    <th>Module</th>
+                    <th>Serial numbers</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for key, val in device_serial_numbers.items() %}
+                <tr>
+                    <td>{{ activated_modules_dict[key].display_name }}</td>
+                    <td>{{ val }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 </div>
 {% endblock %}
 {% block scripts %}
